<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_cam_bringup</name>
  <version>0.0</version>
  <description>A ROS 2 Driver Launch File for V4L USB Cameras</description>

  <maintainer email="arlunan@ieee.org">AR Lunan</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ARLunan/usb_cam_bringup/tree/main</url>
  
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_type>ament_python</build_type>
  </export>
  
</package>



